--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-container{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  height: 100%;
+}
+.header-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 30px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  height: 20%;
+  width: 100%;
+  flex-wrap: wrap;
+  border-bottom: 1px solid;
+  text-shadow: 2px 5px 8px rgba(0,0,0,0.6);
+  
+}
+.cards-container{
+  padding-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  height: 100%;
+  width: 96%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+ 
+  background-color: rgb(247, 247, 247);
+  
+}
+.card-component{
+  display: flex;
+  width: 230px;
+  gap: 10px;
+  padding: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.752);
+  border-radius: 0.2rem;
+  
+}
+.card-component:hover{
+  transform: scale(1.1);
+  cursor: pointer;
+  box-shadow: -2px 10px 10px -1px rgba(0,0,0,0.36);
+-webkit-box-shadow: -2px 10px 10px -1px rgba(0,0,0,0.36);
+-moz-box-shadow: -2px 10px 10px -1px rgba(0,0,0,0.36);
+}
+.card-component h1{
+  font-size: medium;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+
+h1 {
+  width: 70%;
+  font-size: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+button {
+  width: 100px;
+  height: 50px;
+  box-shadow: -2px 10px 10px -1px rgba(0,0,0,0.36);
+-webkit-box-shadow: -2px 10px 10px -1px rgba(0,0,0,0.36);
+-moz-box-shadow: -2px 10px 10px -1px rgba(0,0,0,0.36);
+
+  border-radius: 0.2rem;
+  border: 1px solid black;
+  
 }
+button:hover{
+  transform: scale(1.1);
+}
+
+
