--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   justify-content: center;
   width: 100%;
   height: 100%;
+  background-color: rgb(242, 240, 240);
 }
 .header-container{
   display: flex;
@@ -18,6 +19,8 @@
   flex-wrap: wrap;
   border-bottom: 1px solid;
   text-shadow: 2px 5px 8px rgba(0,0,0,0.6);
+  background-color: white;
+ 
   
 }
 .cards-container{
@@ -32,7 +35,7 @@
   flex-wrap: wrap;
   gap: 15px;
  
-  background-color: rgb(247, 247, 247);
+  background-color: rgb(242, 240, 240);
   
 }
 .card-component{
@@ -42,6 +45,7 @@
   padding: 5px;
   border: 1px solid rgba(0, 0, 0, 0.752);
   border-radius: 0.2rem;
+  background-color: white;
   
 }
 .card-component:hover{
@@ -52,15 +56,19 @@
 -moz-box-shadow: -2px 10px 10px -1px rgba(0,0,0,0.36);
 }
 .card-component h1{
-  font-size: medium;
+  font-size: 0.8rem;
 }
 
 
 
 
-h1 {
+.header-container h1 {
   width: 70%;
   font-size: 2rem;
+  -webkit-text-stroke-width: 0.7px;
+  -webkit-text-stroke-color: #000000;
+  -webkit-text-fill-color: rgb(237, 233, 233);
+  font-family: Impact, Charcoal, sans-serif;
 }
 
 
@@ -71,7 +79,7 @@ button {
   box-shadow: -2px 10px 10px -1px rgba(0,0,0,0.36);
 -webkit-box-shadow: -2px 10px 10px -1px rgba(0,0,0,0.36);
 -moz-box-shadow: -2px 10px 10px -1px rgba(0,0,0,0.36);
-
+background-color:rgb(242, 240, 240);
   border-radius: 0.2rem;
   border: 1px solid black;
   
